Created demo folder, I guess this is how it will be

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,6 @@
     <input type="button" value="1"></input>
     <input type="button" value="2"></input>
     <input type="button" value="5"></input>
-    <script type="text/javascript" src="test-built.js"></script>
+    <script type="text/javascript" src="demo-built.js"></script>
   </body>
 </html>
